--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
   "author": "Italo Ruann",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.6.3"
+    "mongoose": "^7.6.3",
+    "nodemon": "^3.0.1"
   }
 }
